Fixed mobile menu visibility toggle and mobile icon visibility

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -84,18 +84,18 @@
     color: transparent;
 }
 
+
+
+
+
+
 @media (max-width: 991px) {
 
-    .hide-me {
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 0.3s ease, visibility 0s linear 0.3s;
-    }
-    .hide-me.show {
-        opacity: 1;
-        visibility: visible;
-        transition-delay: 0s;
-    }
+
+
+
+
+
 
     .navbar-links a {
         /* color: white; */
@@ -124,10 +124,7 @@
         color: var(--mainColour);
     }
 
-    .mobile-icon-links {
-        display: inline-block;
-        padding-left: 0.5rem;
-    }
+
     .text-links {
         padding-top: 2.5vh;
         padding-bottom: 2.5vh;
@@ -170,28 +167,48 @@
         text-align: center;
     }
 
+
+    #icon-link2 {
+        position: absolute;
+        bottom: 0;
+        transform: translate(-1.6rem, 150px);
+    }
+
+    #icon-link1 {
+        position: absolute;
+        bottom: 0;
+        transform: translate(calc(-3.2rem - 22px), 150px);
+    }
+
+    #icon-link0 {
+        position: absolute;
+        bottom: 0;
+        transform: translate(calc(-4.8rem - 44px), 150px);
+    }
     .icon-links {
-        display: none;
-    }
-
-
-
-    .icon-links-mobile {
-        position: absolute;
-        bottom: 80px;
-        right: 10vw;
-    }
-
-}
-
-@media (max-height: 500px) {
-    .icon-links-mobile {
-        position: absolute;
-        bottom: 10px;
-        /* right: 65px; */
+        opacity: 0%;
     }
 }
 
+@media (max-height: 520px) {
+    #icon-link2 {
+        position: absolute;
+        bottom: 0;
+        transform: translate(-1.6rem, 3.2rem);
+    }
+
+    #icon-link1 {
+        position: absolute;
+        bottom: 0;
+        transform: translate(calc(-3.2rem - 22px), 3.2rem);
+    }
+
+    #icon-link0 {
+        position: absolute;
+        bottom: 0;
+        transform: translate(calc(-4.8rem - 44px), 3.2rem);
+    }
+}
 
 @media (min-width: 992px) {
 
@@ -207,9 +224,6 @@
         display: none;
     }
 
-    .icon-links-mobile {
-        display: none;
-    }
 
     .navbar {
         display: flex;
@@ -244,15 +258,12 @@
         display: block;
         transition: opacity 0.4s ease-out, transform .2s ease-in-out;
     }
-    
-    
 
     .navbar-links:hover a:not(:hover) {
         opacity: 0.7;
         opacity: 0.5;
         filter: blur(0.015rem);
         -webkit-filter: blur(0);
-
     }
     
     .navbar-links a:hover {
